--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "mono_framework"
+name = "mono_framework_rs"
 version = "0.1.0"
 authors = ["Sune Kirkeby <mig@ibofobi.dk>"]
 build = "build.rs"
