--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,4 @@ build = "build.rs"
 gcc = "0.3"
 
 [dependencies]
-alloc_malloc = { path = "../alloc_malloc" }
+alloc_malloc = { path = "alloc_malloc" }
